# wurm-panels

./: README.md
auth-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
auth-api/src/: auth.rs  config.rs  main.rs  routes.rs
wurm-panels/: farming-grind-calc.html  granger.html  index.html  map.html  package.json  pnpm-lock.yaml  skills.html  splashscreen.html  vite.config.ts
wurm-panels/src/: communityDeeds.ts  farming.ts  map.ts  mapConfigs.ts  styles.css  watcher.ts
wurm-panels/src-tauri/: Cargo.toml  tauri.conf.json
wurm-panels/src-tauri/capabilities/: default.json
wurm-panels/src-tauri/src/: auth_client.rs  lib.rs  main.rs  skill_sessions.rs  trade_entries.rs  user_layers_persistence.rs  watcher.rs
wurm-panels/src/types/: algebrite.d.ts
wurm-sales/: README.md  granger.html  index.html  map.html  package.json  pnpm-lock.yaml  settings.html  skills.html  trade.html  tsconfig.json  vite.config.ts  watcher.html
wurm-sales/src/: communityDeeds.ts  main.ts  map.ts  mapConfigs.ts  styles.css  userLayers.ts  watcher.ts
wurm-sales/src-tauri/: Cargo.toml  tauri.conf.json
wurm-sales/src-tauri/capabilities/: default.json
wurm-sales/src-tauri/src/: app_settings.rs  community_deeds_persistence.rs  granger.rs  main.rs  skill_sessions.rs  user_layers_persistence.rs  watcher.rs
